[package]
name = "typology-derive"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
syn         = { version = "2" }
quote       = { version = "1" }

[lints]
workspace = true
