[package]
name = "typology"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
readme = "../readme.md"

[dependencies]
typology-derive = { version = "0.1", path = "../typology-derive" }

[lints]
workspace = true
